<resources>
    <string name="app_name">Swasthya Mitra</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="register_now">Register Now</string>
</resources>